<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:context=".activities.MainActivity">


            <EditText
                android:id="@+id/editText_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="17dp"
                android:hint="@string/descricao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_recorrencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/recorrencia"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/editText_descricao" />

            <Spinner
                android:id="@+id/spinner_recorrencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="@+id/textView_recorrencia"
                app:layout_constraintTop_toBottomOf="@+id/textView_recorrencia" />

            <TextView
                android:id="@+id/textView_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/valor"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/spinner_recorrencia" />

            <EditText
                android:id="@+id/editText_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/zeroReais"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/textView_valor"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_valor"
                app:layout_constraintTop_toBottomOf="@+id/textView_valor" />

            <CheckBox
                android:id="@+id/checkedView_multicategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Multicategorias"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="@+id/editText_valor"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editText_valor"
                app:layout_constraintTop_toBottomOf="@+id/editText_valor" />

            <TextView
                android:id="@+id/textView_dataVencimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/data_de_vencimento"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/checkedView_multicategorias" />

            <EditText
                android:id="@+id/editText_dataVencimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textSize="13dp"
                android:ems="7"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="@+id/textView_dataVencimento"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_dataVencimento"
                app:layout_constraintTop_toBottomOf="@+id/textView_dataVencimento" />

            <TextView
                android:id="@+id/textView_situacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/situacao"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/editText_dataVencimento" />

            <RadioGroup
                android:id="@+id/radioGroup_situacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView_situacao"
                app:layout_constraintTop_toBottomOf="@+id/textView_situacao">

                <RadioButton
                    android:id="@+id/radio_pendente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginEnd="10dp"

                    android:text="@string/pendente" />

                <RadioButton
                    android:id="@+id/radio_efetivada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="12dp"
                    android:text="@string/efetivada" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="13dp"
                android:hint="@string/categoria"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup_situacao" />

            <Spinner
                android:id="@+id/spinner_categoria"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="@+id/textView_categoria"
                app:layout_constraintTop_toBottomOf="@+id/textView_categoria" />

            <TextView
                android:id="@+id/textView_subcategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/subcategoria"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/spinner_categoria" />

            <Spinner
                android:id="@+id/spinner_subcategoria"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_subcategoria" />

            <TextView
                android:id="@+id/textView_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="13dp"
                android:hint="@string/conta"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/spinner_subcategoria" />

            <Spinner
                android:id="@+id/spinner_conta"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                app:layout_constraintStart_toStartOf="@+id/textView_conta"
                app:layout_constraintTop_toBottomOf="@+id/textView_conta" />

            <CheckBox
                android:id="@+id/checkBox_salvarContinuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="13dp"
                android:text="@string/salvar_e_continuar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_conta" />

            <TextView
                android:id="@+id/textView_dataLancamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/data_de_lancamento"
                app:layout_constraintStart_toStartOf="@+id/checkBox_salvarContinuar"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_salvarContinuar" />

            <EditText
                android:id="@+id/editText_dataLancamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="7"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="@+id/textView_dataLancamento"
                app:layout_constraintEnd_toStartOf="@+id/textView_horario"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_dataLancamento"
                app:layout_constraintTop_toBottomOf="@+id/textView_dataLancamento" />

            <TextView
                android:id="@+id/textView_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:hint="@string/horario"
                app:layout_constraintBottom_toBottomOf="@+id/textView_dataLancamento"
                app:layout_constraintStart_toEndOf="@+id/textView_dataLancamento"
                app:layout_constraintTop_toTopOf="@+id/textView_dataLancamento"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editText_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="7"
                android:focusable="false"
                android:maxLines="1"
                android:textSize="13dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_horario"
                app:layout_constraintTop_toBottomOf="@+id/textView_horario" />

            <TextView
                android:id="@+id/textView_dataPagamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/data_de_pagamento"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/editText_dataLancamento" />

            <EditText
                android:id="@+id/editText_dataPagamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="7"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="@+id/textView_dataPagamento"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_dataPagamento"
                app:layout_constraintTop_toBottomOf="@+id/textView_dataPagamento" />

            <TextView
                android:id="@+id/textView_observacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Observações"
                app:layout_constraintStart_toStartOf="@+id/editText_descricao"
                app:layout_constraintTop_toBottomOf="@+id/editText_dataPagamento" />


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="0dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="@+id/textView_observacoes"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_observacoes"
                app:layout_constraintTop_toBottomOf="@+id/textView_observacoes" />

            <TextView
                android:id="@+id/textView_legendaObservacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textAlignment="center"
                android:text="@string/legenda_observacoes"
                android:textSize="11dp"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <ImageButton
                android:id="@+id/imageButton_addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_add_image"
                app:layout_constraintStart_toStartOf="@+id/textView_legendaObservacoes"
                app:layout_constraintTop_toBottomOf="@+id/textView_legendaObservacoes" />

            <ImageButton
                android:id="@+id/imageButton_takePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_photo"
                app:layout_constraintStart_toEndOf="@+id/imageButton_addImage"
                app:layout_constraintTop_toBottomOf="@+id/textView_legendaObservacoes" />

            <ImageButton
                android:id="@+id/imageButton_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_pdf"
                app:layout_constraintEnd_toEndOf="@+id/textView_legendaObservacoes"
                app:layout_constraintStart_toEndOf="@+id/imageButton_takePicture"
                app:layout_constraintTop_toBottomOf="@+id/textView_legendaObservacoes" />

            <ImageView
                android:id="@+id/imageView_miniatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_legendaObservacoes"
                app:layout_constraintTop_toBottomOf="@+id/textView_legendaObservacoes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
